2009-04-01  Gordon Williams <gordon.williams@collabora.co.uk>

        * src/main.c: Right after initialisation, tell clutter not to mipmap
        fonts. Findings of NB#105969 show this is much faster, and we don't
        need it.
        * debian/control
        * src/mb/hd-comp-mgr.c: Move setting of HD-MBWMCompMgrClutterClient
        in actor to the MBWMCompMgrClutterClient itself - removing the risk
        of a pointer dangling to a destroyed class. Fixed NB#107681

2009-04-01  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* configure.ac: Move -DG_DISABLE_CHECKS to debian/rules.

2009-03-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Cleanups in the states.

	* home/hd-title-bar.h
	* home/hd-title-bar.c:
	  Removed empty hd_title_bar_set_show().
	* home/hd-render-manager.h:
	  Removed ineffective STATE_SHOW_TITLE.
	  Removed unused STATE_APP_FULLSCREEN.
	* home/hd-render-manager.c:
	  Updated accordingly.

2009-03-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Don't show applets in the background in switcher and launcher views.

	* src/home/hd-render-manager.h:
	  Added STATE_SHOW_APPLETS().
	* src/home/hd-render-manager.c (hd_render_manager_set_state,
	  hd_render_manager_sync_clutter_before):
	  Hide/show HdHome's front container (which contains all applet
	  containers).  Also moved the code that moved the front back
	  and forth from sync_clutter to set_state because it seems to
	  have a better place there.

2009-03-31  Gordon Williams <gordon.williams@collabora.co.uk>

        * src/mb/hd-comp-mgr.c: Check that an actor's stage is valid. It may
         not be if it has no parent

2009-03-31  Gordon Williams <gordon.williams@collabora.co.uk>

        * src/tidy/tidy-highlight.c: Now cache the pixel shader so it isn't 
          loaded once per icon
        * src/mb/hd-animation-actor.c
        * src/mb/hd-animation-actor.h: Removed warnings code for NB#107323,
          as it didn't play well with the fix in libmatchbox
