@@ -1,3 +1,9 @@
+2009-03-31  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* src/mb/hd-comp-mgr.c
+	* src/home/hd-render-manager.c:
+	  Cosmetic changes, just to commit something today.
+
 2009-04-01  Gordon Williams <gordon.williams@collabora.co.uk>
 
         * src/main.c: Right after initialisation, tell clutter not to mipmap
